# redis-rust

./: .gitignore  CLAUDE.md  Cargo.toml  OPTIMIZATIONS.md  README.md  bench.ps1  bench.sh  bench_unix.sh  benchmark_results.txt  cluster_bench.sh  deploy-cluster-bom.ps1  nodes.conf  phases.md  prompt  replication_bench.sh  sentinel_bench.sh  test_lifetime  test_lifetime2  test_output.txt
benches/: micro_bench.rs
docs/: commands.html  count_commands.py  server-lifecycle-1.html  server-lifecycle-2.html  server-lifecycle-3.html  server-lifecycle-4.html  server-lifecycle.md
scripts/: README.md  check-cluster.ps1  check_syntax.py  deploy-cluster.ps1
scripts/bench/: bench.ps1  bench.sh  cluster_bench.sh  replication_bench.sh  sentinel_bench.sh
scripts/cluster/: README.md  deploy-cluster.ps1  stop-cluster.ps1
scripts/tools/: bisect.py  check-bom.ps1
src/: acl.rs  aof.rs  command.rs  error.rs  keyspace.rs  latency.rs  lib.rs  main.rs  protocol.rs  pubsub.rs  rdb.rs  replication.rs  scripting.rs  server.rs  slowlog.rs
src/cluster/: bus.rs  failover.rs  gossip.rs  mod.rs  protocol.rs  state.rs
src/command/: executor.rs  executor_admin.rs  executor_bitmap.rs  executor_geo.rs  executor_hash.rs  executor_hll.rs  executor_list.rs  executor_set.rs  executor_stream.rs  executor_string.rs  executor_zset.rs  info.rs  mod.rs  parser.rs  parser_bitmap.rs  parser_geo.rs  parser_hash.rs  parser_hll.rs  parser_key.rs  parser_list.rs  parser_pubsub.rs  parser_server.rs  parser_set.rs  parser_stream.rs  resp.rs  (+13 more)
tests/: eviction_bench.rs  integration_test.rs  watch_stress_test.rs
(+25 files in other folders)
