[package]
name = "redis-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
ordered-float = "5"
rand = "0.8"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
sha1 = "0.10"
crc32fast = "1.3"
itoa = "1"
